# ai-copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  PROJECT_CONTEXT.md  README.md  TODO.md  alembic.ini  project_structure.md  pyproject.toml
alembic/: env.py
alembic/versions/: 665678e7c9c9_init.py  9c0d1e2f3a4b_drop_ivfflat_index.py  d4e5f6a7b8c9_rename_to_filename_and_cst.py
app/: main.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  chat.py  upload.py
app/core/: config.py  logger.py
app/db/: session.py
app/db/models/: __init__.py  chunk.py  document.py
app/schemas/: chat.py
app/services/ingestion/: chunker.py  file_parser.py  ingestion_service.py
app/services/llm/: minimax.py
app/services/rag/: embedding.py  generator.py  retriever.py
app/tasks/: ingestion_task.py
app/utils/: time_util.py
notes/: _check_pg.py  _smoke_uvicorn.sh  _time_embed.py  alembic_pgvector.md
scripts/: lint_md.py
tests/: __init__.py  test_retriever.py  test_smoke.py
